removed background-fixed

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
     </div> -->
 
 
-    <div class="fixed-background">
+    <!-- <div class="fixed-background">
         <div class="fixed-background__inner">
         </div>
-    </div>
+    </div> -->
 
     <div class="contact-box">
         <p class="contact-box__heading">Готові? Залиште ваш номер, і ми вам зателефонуємо.</p>
