added schedule, amended code

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theatre</title>
 
+    <link rel="icon" type="image/x-icon" href="myfavicon.ico">
     <link rel="stylesheet" href="styles/css/reset.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css"> -->
-    <link rel="stylesheet" href="styles/css/index.css">
+    <!-- <link rel="stylesheet" href="styles/css/index.css"> -->
 
 </head>
 
@@ -27,12 +28,12 @@
                 </h3>
             </div>
         </div>
-        <img class="cover__img cover__img--desktop" src="img/2-people-in-theatre-full.png" alt=""><img class="cover__img cover__img--mobile"
-            src="img/2-people-in-theatre.png" alt="">
+        <img class="cover__img cover__img--desktop" src="img/2-people-in-theatre-full.png" aria-hidden="true" alt=""><img
+            class="cover__img cover__img--mobile" src="img/2-people-in-theatre.png" aria-hidden="true" alt="">
     </div>
 
     <div class="s-section s-section--purpose" id="s-section--purpose">
-        <img class="s-section--purpose__img" src="img/projector.svg" alt="">
+        <img class="s-section--purpose__img" src="img/projector.svg" aria-hidden="true" alt="">
         <div class="s-section__inner s-section--purpose__inner">
             <div class="s-section__text s-section--purpose__text">
                 <h2 class="s-section__heading s-section--purpose__heading">Чого ми вчимо?</h2>
@@ -46,56 +47,58 @@
         </div>
         <div class="s-section__slider s-section--purpose__slider">
             <div class="slider__inner">
-                <div class="slider__text">Light from a service hatch at the rear of the blowers and the amplified breathing
+                <div class="slider__desc">Light from a service hatch at the rear of the blowers and the amplified
+                    breathing
                     of
                     the fighters. He
-                    stared at the rear of the arcade showed him broken lengths of damp chipboard and the dripping chassis of
+                    stared at the rear of the arcade showed him broken lengths of damp chipboard and the dripping
+                    chassis of
                     a gutted game console.
                 </div>
                 <div class="glide">
                     <div class="glide__track" data-glide-el="track">
                         <ul class="glide__slides">
                             <li class="glide__slide">
-                                <img src="img/carousel/good-group-photo.jpg" alt="">
+                                <img src="img/carousel/good-group-photo.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/abos.jpg" style="object-position: 0 65%;" alt="">
+                                <img src="img/carousel/abos.jpg" style="object-position: 0 65%;" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/students.jpg" alt="">
+                                <img src="img/carousel/students.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/performance.jpg" alt="">
+                                <img src="img/carousel/performance.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/hands.jpg" alt="">
+                                <img src="img/carousel/hands.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/games4.jpg" alt="">
+                                <img src="img/carousel/games4.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/games5.jpg" style="object-position: 0 30%;" alt="">
+                                <img src="img/carousel/games5.jpg" style="object-position: 0 30%;" alt="фотографії з занять в тетральній студії">
                             </li>
                             <!-- <li class="glide__slide">
                                     <img src="img/carousel/games6.jpg" alt="">
                                 </li> -->
                             <li class="glide__slide">
-                                <img src="img/carousel/games7.jpg" style="object-position: 0 10%;" alt="">
+                                <img src="img/carousel/games7.jpg" style="object-position: 0 10%;" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/aerobics.jpg" alt="">
+                                <img src="img/carousel/aerobics.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/group-photo.jpg" alt="">
+                                <img src="img/carousel/group-photo.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/games.jpg" alt="">
+                                <img src="img/carousel/games.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/games3.jpg" alt="">
+                                <img src="img/carousel/games3.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                             <li class="glide__slide">
-                                <img src="img/carousel/hands1.jpg" alt="">
+                                <img src="img/carousel/hands1.jpg" alt="фотографії з занять в тетральній студії">
                             </li>
                         </ul>
                     </div>
@@ -126,72 +129,6 @@
     </div>
 
 
-    <!-- <div class="glide">
-        <div class="glide__track" data-glide-el="track">
-            <ul class="glide__slides">
-                <li class="glide__slide">
-                    <img src="img/carousel/good-group-photo.jpg" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/abos.jpg" style="object-position: 0 65%;" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/students.jpg" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/performance.jpg" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/hands.jpg" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/games4.jpg" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/games5.jpg" style="object-position: 0 30%;" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/games7.jpg" style="object-position: 0 10%;" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/aerobics.jpg" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/group-photo.jpg" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/games.jpg" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/games3.jpg" alt="">
-                </li>
-                <li class="glide__slide">
-                    <img src="img/carousel/hands1.jpg" alt="">
-                </li>
-            </ul>
-        </div>
-        <div class="glide__arrows" data-glide-el="controls">
-            <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><img src="img/arrow.svg"
-                    alt="прогортати назад"></button>
-            <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><img src="img/arrow.svg"
-                    alt="прогортати вперед"></button>
-        </div>
-        <div class="glide__bullets" data-glide-el="controls[nav]">
-            <button class="glide__bullet" data-glide-dir="=0"></button>
-            <button class="glide__bullet" data-glide-dir="=1"></button>
-            <button class="glide__bullet" data-glide-dir="=2"></button>
-            <button class="glide__bullet" data-glide-dir="=3"></button>
-            <button class="glide__bullet" data-glide-dir="=4"></button>
-            <button class="glide__bullet" data-glide-dir="=5"></button>
-            <button class="glide__bullet" data-glide-dir="=6"></button>
-            <button class="glide__bullet" data-glide-dir="=7"></button>
-            <button class="glide__bullet" data-glide-dir="=8"></button>
-            <button class="glide__bullet" data-glide-dir="=9"></button>
-            <button class="glide__bullet" data-glide-dir="=10"></button>
-            <button class="glide__bullet" data-glide-dir="=11"></button>
-            <button class="glide__bullet" data-glide-dir="=12"></button>
-        </div>
-    </div> -->
     <div class="s-section s-section--teaching">
         <div class="s-section__inner s-section--teaching__inner">
             <div class="s-section__text">
@@ -209,20 +146,25 @@
         </div>
     </div>
 
-    <!-- <div class="s-cards s-cards--abo">
-    <div class="cards cards--abo">
-      <h2 class="s-heading s-cards__heading s-cards--abo__heading">Абонемент</h2>
-      <div class="cards__flexbox">
-        
-      </div>
-    </div>
-  </div> -->
-
 
     <div class="s-cards">
         <div class="s-cards__inner">
             <h2 class="s-cards__heading s-cards--abo__heading">Абонемент</h2>
-            <p class="s-cards__desc s-cards--abo__desc">Заняття проводяться тричі на тиждень, в понеділок, четвер і суботу. Абонементів є три види, кожен з яких дозволяє відвідати певну кількість занять в місяць. Дні не є фіксованими.</p>
+            <p class="s-cards__desc s-cards--abo__desc">Case had never seen him wear the same suit twice, although his
+                wardrobe seemed to consist entirely of meticulous reconstruction’s of garments of the bright void beyond
+                the chain link. The girls looked like tall, exotic grazing animals, swaying gracefully and unconsciously
+                with the movement of the train, their high heels like polished hooves against.
+            </p>
+            <div class="s-cards__schedule">
+                <h2 class="schedule__heading">Коли?</h2>
+                <hr>
+                <div class="schedule__flexbox">
+                    <div class="schedule__chip">Пн. 19:00 - 20:30</div>
+                    <div class="schedule__chip">Чт. 19:00 - 20:30</div>
+                    <div class="schedule__chip">Сб. 14:00 - 15:30</div>
+                </div>
+            </div>
+
             <div class="cards">
                 <div class="card card--abo">
                     <h3 class="card__heading card--abo__heading"><span>1 раз</span><br> на тиждень</h3>
@@ -234,23 +176,25 @@
                 </div>
                 <div class="card card--abo">
                     <h3 class="card__heading card--abo__heading"><span>Безліміт</span></h3>
-                    <p class="card__desc card--abo__desc">Відвідування усіх занять -- близько 12 в місяць. Ціна: 800 грн.</p>
+                    <p class="card__desc card--abo__desc">Відвідування усіх занять -- близько 12 в місяць. Ціна: 800
+                        грн.</p>
                 </div>
             </div>
         </div>
 
         <div class="contact-box">
             <p class="contact-box__heading">Готові? Залиште ваш номер, і ми вам зателефонуємо.</p>
-    
+
             <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
-            <form class="contact-box__input-wrapper contact-box__form"
+            <form class="contact-box__form"
                 action="https://docs.google.com/forms/u/3/d/e/1FAIpQLSfAp6I5nfgVMbYQJA92OggrI7X2XjLzNWGPIvyZ22t6aasmhg/formResponse"
-                target="hidden_iframe" method="POST" id="mG61Hd" class="contact-box__form">
+                target="hidden_iframe" method="POST" id="mG61Hd">
                 <input type="text" class="contact-box__input" aria-label="Номер телефону" name="entry.850626660"
                     minlength="4" required>
                 <button type="submit" class="contact-box__btn">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-                        y="0px" viewBox="-15 -15 74 74" style="enable-background:new 0 0 44 44;" xml:space="preserve">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px" y="0px" viewBox="-15 -15 74 74" style="enable-background:new 0 0 44 44;"
+                        xml:space="preserve">
                         <g class="arrow-layer">
                             <g class="arrow">
                                 <!-- <line class="st0" x1="41.7" y1="22" x2="2.3" y2="22" /> -->
@@ -286,15 +230,6 @@
                     <a href="viber://chat/?number=%2BPHONENUMBERWITHCOUNTRYCODE" target="_blank"
                         class="medium viber"><img src="img/viber.svg" alt="іконка Viber"></a>
                 </div>
-                <!-- <div class="info">
-          <address>
-            Інститут менеджменту<br>
-            м. Львів<br>
-            вул. Ліська, 16
-          </address>
-          <br>
-          <p>+380681234567</p>
-        </div> -->
                 <div class="credit">
                     <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHxTnrBMwGJbjblRnDCWzCFVJJNgLdkbQTfXgSVKTwFhcMDjQSBVTwHPwCdltkWThNcbTTq"
                         target="_blank">Розробка:
@@ -307,6 +242,6 @@
 
 <script src="js/glide.min.js"></script>
 <script src="js/backgroundCheck.js"></script>
-<script src="js/index.js"></script>
+<script src="dist/bundle.js"></script>
 
 </html>
