--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="icon" type="image/x-icon" href="myfavicon.ico">
     <link rel="stylesheet" href="styles/css/reset.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> -->
+
     <style>
         noscript {
             font-size: 2rem;
@@ -46,10 +48,6 @@
                 alt=""><img class="cover__img cover__img--mobile" src="img/2-people-in-theatre.png" aria-hidden="true"
                 alt="">
         </div>
-        <script>
-            var content = document.getElementById("content");
-            content.style.display = "block";
-        </script>
 
         <div class="s-section s-section--purpose" id="s-section--purpose">
             <img class="s-section--purpose__img" src="img/projector.svg" aria-hidden="true" alt="">
