--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Theatre</title>
 
     <link rel="icon" type="image/x-icon" href="myfavicon.ico">
-    <!-- <link rel="stylesheet" href="styles/css/reset.css"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.11/">
+    <link rel="stylesheet" href="styles/css/reset.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.11/"> -->
 
     <style>
         noscript {
